<resources>
    <string name="app_name">Rider Uber Clone</string>
    <string name="continue_text">Continue</string>
    <string name="register_text">Let\'s start with creating your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_driver_home">RiderHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="denied_permissions">The app has not been granted the required permissions, please allow it by going into the settings.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="close_dialog_perm">close</string>
    <string name="title_activity_rider_home">RiderHomeActivity</string>
    <string name="permission_required">Location Permission required!</string>
    <string name="drivers_are_not_found">Drivers are not found</string>
    <string name="drivers_are_found">Drivers are available!!</string>
    <string name="key_not_found">Key not found</string>
    <string name="google_api">AIzaSyCetXfiSAW8pbdRaXlO1aNUYIx4Zlr05iQ</string>
    <string name="city_name_not_found">City name is not found</string>
    <string name="welcome">Assalomu alaykum</string>
    <string name="choose_place">Choose place</string>
    <string name="title_activity_request_driver">RequestDriverActivity</string>
    <string name="pay_by_cash">Pay by Cash</string>
    <string name="confirm_uber">Confirm Uber</string>
    <string name="confirm_pickup">Confirm pickup</string>
    <string name="finding_your_rider">Finding your ride</string>
    <string name="token_not_found">Token not found</string>
    <string name="send_request_to_driver_failed">Send request to driver failed</string>
    <string name="address">Address</string>
    <string name="image">image</string>
    <string name="meet_driver_here">Meet driver here</string>
    <string name="no_driver_accepted">There is no driver accepted your request</string>
    <string name="trip_not_found">"Trip is not found "</string>
    <string name="uber_x">Cobalt\n</string>
    <string name="car_number_example">60FA299M</string>
    <string name="driver_name_example">Dan Murphy</string>
    <string name="ascii_dot">■</string>
    <string name="language_example">Knows English</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="total_fee">Total fee</string>
    <string name="trip_details">Trip details</string>
    <string name="demo_address">Nurmahalla, Shahrihon</string>
    <string name="base_fare">Base Fare</string>

</resources>