<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_main_layout"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TripDetailActivity">

    <LinearLayout
        android:padding="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/quantum_ic_arrow_back_grey600_24"
            />

        <TextView
            android:text="@string/trip_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:fontFamily="@font/uber_move"
            android:textColor="@color/gray"/>

    </LinearLayout>

    <FrameLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="19/12/2021 2:30pm"
                    android:fontFamily="@font/uber_move"/>

                <TextView
                    android:id="@+id/txt_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="$80.11"
                    android:fontFamily="@font/uber_move"/>


            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/round"
                        android:layout_gravity="bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/txt_origin_trip"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/uber_move"
                            android:text="@string/demo_address"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/gray"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/cube"
                        android:layout_gravity="bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <TextView
                        android:id="@+id/txt_destination_trip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/uber_move"
                        android:text="@string/demo_address"/>

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:background="@color/gray">

                    <TextView
                        android:text="Receipt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:fontFamily="@font/uber_move"/>

                </LinearLayout>

                <TextView
                    android:text="uberX Recepit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/uber_move"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/base_fare"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:fontFamily="@font/uber_move"/>

                    <TextView
                        android:id="@+id/txt_base_fare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="$80.11"
                        android:fontFamily="@font/uber_move"/>

                </LinearLayout>

                <LinearLayout
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/uber_move"
                        android:textColor="@color/black"
                        android:text="@string/distance"/>

                    <TextView
                        android:id="@+id/txt_distance_trip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/uber_move"
                        android:textColor="@color/black"
                        android:text="1.1 km"/>

                </LinearLayout>

                <LinearLayout
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/uber_move"
                        android:textColor="@color/black"
                        android:text="@string/time"/>

                    <TextView
                        android:id="@+id/txt_time_trip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/uber_move"
                        android:textColor="@color/black"
                        android:text="11 hr"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/black"/>

    </FrameLayout>

</LinearLayout>